<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multirobot_sampling_based</name>
  <version>0.0.0</version>
  <description>ROS2 package for implementing heterogeneuous multiple
  magnetic robot system motion planning and control.</description>
  <maintainer email="farshidasadi47@yahoo.com">Farshid Asadi</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>numpy</depend>
  <depend>matplotlib</depend>
  <depend>opencv-python</depend>
  <depend>scipy</depend>
  <depend>faiss-cpu</depend>
  <depend>triangle</depend>
  <depend>python-fcl</depend>

  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

